fixed cropped animoji

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -559,7 +559,7 @@ footer {
         position: absolute;
         top: 10vh;
         // height: 90vh;
-        overflow: hidden !important;
+        // overflow: hidden !important;
 
         &.pos {
             position: unset;
